@@ -25,7 +25,7 @@
 
 #define COLOR_WARN 0xF800
 
-#define DISPLAY_ADJUST 190
+#define DISPLAY_ADJUST 80
 
 #define SERIAL_RATE 19200
 
@@ -34,7 +34,7 @@
 
 #define TICKER_BATTERY 1200
 #define TICKER_DATETIME 2
-#define TICKER_CLOCKS 20
+#define TICKER_CLOCKS 80
 #define TICKER_STEPS 20
 #define TICKER_DETECT_ONHAND 5
 
